WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170154
LayoutTest webrtc/datachannel/basic.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=170154
Summary
LayoutTest webrtc/datachannel/basic.html is a flaky crash
Ryan Haddad
Reported
2017-03-27 18:08:32 PDT
LayoutTest webrtc/datachannel/basic.html is a flaky crash
https://build.webkit.org/results/Apple%20Sierra%20Release%20WK2%20(Tests)/r214437%20(205)/results.html
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=webrtc%2Fdatachannel%2Fbasic.html
Thread 7 Crashed:: Thread 0x0x7ff802b866 0 libsystem_kernel.dylib 0x00007fff8445cf06 __pthread_kill + 10 1 libsystem_pthread.dylib 0x00007fff8e4624ec pthread_kill + 90 2 libsystem_c.dylib 0x00007fff887f86df abort + 129 3 libwebrtc.dylib 0x000000011a0f13d0 rtc::FatalMessage::~FatalMessage() + 464 (checks.cc:103) 4 libwebrtc.dylib 0x000000011a0f13e5 rtc::FatalMessage::~FatalMessage() + 21 5 libwebrtc.dylib 0x000000011a6e1023 rtc::Thread::AssertBlockingIsAllowedOnCurrentThread() + 211 (thread.cc:298) 6 libwebrtc.dylib 0x000000011a6e0e23 rtc::Thread::SleepMs(int) + 19 (thread.cc:174) 7 libwebrtc.dylib 0x000000011a834423 cricket::SctpTransport::UsrSctpWrapper::UninitializeUsrSctp() + 243 (sctptransport.cc:264) 8 libwebrtc.dylib 0x000000011a83232e cricket::SctpTransport::UsrSctpWrapper::DecrementUsrSctpUsageCount() + 62 (sctptransport.cc:281) 9 libwebrtc.dylib 0x000000011a8284b5 cricket::SctpTransport::CloseSctpSocket() + 309 (sctptransport.cc:755) 10 libwebrtc.dylib 0x000000011a82830a cricket::SctpTransport::~SctpTransport() + 58 (sctptransport.cc:401) 11 libwebrtc.dylib 0x000000011a8284f5 cricket::SctpTransport::~SctpTransport() + 21 (sctptransport.cc:401) 12 libwebrtc.dylib 0x000000011a828549 cricket::SctpTransport::~SctpTransport() + 25 (sctptransport.cc:398) 13 libwebrtc.dylib 0x000000011a455e3e webrtc::WebRtcSession::DestroySctpTransport_n() + 446 (webrtcsession.cc:1952) 14 libwebrtc.dylib 0x000000011a473eed void rtc::MethodFunctor<webrtc::WebRtcSession, void (webrtc::WebRtcSession::*)(), void>::CallMethod<>(rtc::sequence<>) const + 109 (bind.h:164) 15 libwebrtc.dylib 0x000000011a473e75 rtc::MethodFunctor<webrtc::WebRtcSession, void (webrtc::WebRtcSession::*)(), void>::operator()() const + 21 (bind.h:155) 16 libwebrtc.dylib 0x000000011a473e53 rtc::FunctorMessageHandler<void, rtc::MethodFunctor<webrtc::WebRtcSession, void (webrtc::WebRtcSession::*)(), void> >::OnMessage(rtc::Message*) + 35 (messagehandler.h:66) 17 libwebrtc.dylib 0x000000011a6e1df0 rtc::Thread::ReceiveSendsFromThread(rtc::Thread const*) + 128 (thread.cc:425) 18 libwebrtc.dylib 0x000000011a6e1e79 rtc::Thread::ReceiveSends() + 25 (thread.cc:409) 19 libwebrtc.dylib 0x000000011a2b3d70 rtc::MessageQueue::Get(rtc::Message*, int, bool) + 192 (messagequeue.cc:296) 20 libwebrtc.dylib 0x000000011a6e18cc rtc::Thread::ProcessMessages(int) + 140 (thread.cc:494) 21 libwebrtc.dylib 0x000000011a6e182a rtc::Thread::Run() + 26 (thread.cc:328) 22 libwebrtc.dylib 0x000000011a6e153c rtc::Thread::PreRun(void*) + 364 (thread.cc:318) 23 libsystem_pthread.dylib 0x00007fff8e45f99d _pthread_body + 131 24 libsystem_pthread.dylib 0x00007fff8e45f91a _pthread_start + 168 25 libsystem_pthread.dylib 0x00007fff8e45d351 thread_start + 13
Attachments
Crash log
(101.55 KB, text/plain)
2017-03-27 18:08 PDT
,
Ryan Haddad
no flags
Details
Patch
(7.14 KB, patch)
2017-04-25 22:31 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2017-03-27 18:08:52 PDT
Created
attachment 305533
[details]
Crash log
Radar WebKit Bug Importer
Comment 2
2017-03-27 18:09:31 PDT
<
rdar://problem/31288423
>
Alexey Proskuryakov
Comment 3
2017-04-25 18:54:23 PDT
***
Bug 171203
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 4
2017-04-25 18:55:48 PDT
Still a flaky crash: Thread 48 Crashed:: Thread 0x0x7f9c9d30e9 0 com.apple.WebCore 0x000000010549fe86 non-virtual thunk to WebCore::LibWebRTCDataChannelHandler::OnStateChange() + 38 (atomic:927) 1 libwebrtc.dylib 0x00000001041b6e1c webrtc::DataChannel::Close() + 92 (datachannel.cc:484) 2 libwebrtc.dylib 0x00000001041de3ee sigslot::signal_with_thread_policy<sigslot::single_threaded, int>::operator()(int) + 46 (sigslot.h:606) 3 libwebrtc.dylib 0x0000000104085294 rtc::AsyncInvoker::OnMessage(rtc::Message*) + 20 (asyncinvoker.cc:44) 4 libwebrtc.dylib 0x0000000104160455 rtc::MessageQueue::Dispatch(rtc::Message*) + 245 (messagequeue.cc:539) 5 libwebrtc.dylib 0x00000001042871cd rtc::Thread::ProcessMessages(int) + 317 (thread.cc:503) 6 libwebrtc.dylib 0x0000000104286d9d rtc::Thread::PreRun(void*) + 173 (thread.cc:318) 7 libsystem_pthread.dylib 0x00007fff86d0a99d _pthread_body + 131 8 libsystem_pthread.dylib 0x00007fff86d0a91a _pthread_start + 168 9 libsystem_pthread.dylib 0x00007fff86d08351 thread_start + 13
youenn fablet
Comment 5
2017-04-25 22:31:20 PDT
Created
attachment 308217
[details]
Patch
Geoffrey Garen
Comment 6
2017-04-26 13:54:17 PDT
Comment on
attachment 308217
[details]
Patch r=me
WebKit Commit Bot
Comment 7
2017-04-26 15:01:05 PDT
Comment on
attachment 308217
[details]
Patch Clearing flags on attachment: 308217 Committed
r215832
: <
http://trac.webkit.org/changeset/215832
>
WebKit Commit Bot
Comment 8
2017-04-26 15:01:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug