Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCDataChannelHandler.h
@@ -41,7 +41,7 @@ public:
 
 private:
     // RTCDataChannelHandler API
-    void setClient(RTCDataChannelHandlerClient*) final;
+    void setClient(RTCDataChannelHandlerClient&) final;
     bool sendStringData(const String&) final;
     bool sendRawData(const char*, size_t) final;
     void close() final;
